test/algeff/eff-constant2.kk.out
test/algeff/eff-constant2.kk(6,40): error: invalid syntax
 encountered effect variable e when an effect label was expected
 hint: effect variables must be after `|` (e.g `<labels|e>`), or by themselves (e.g. `e`)